--- a/index.html
+++ b/index.html
@@ -14,24 +14,24 @@
         </div>
         <div class="nav-left">
             <div class="size">
-                <img src="./public/img/home-icon.png" alt="">
-                <p>home</p>
-                <img src="./public/img/packages-icon.png" alt="">
-                <p>home</p>
-                <img src="./public/img/outils-icon.png" alt="">
-                <p>home</p>
-                <img src="./public/img/projets-icon.png" alt="">
-                <p>home</p>
-                <img src="./public/img/temoignages-icon.png" alt="">
-                <p>home</p>
-                <img src="./public/img/contact-icon.png" alt="">
-                <p>home</p>
+                <div class="column"><img src="./public/img/home-icon.png" alt="">
+                <p>home</p></div>
+                <div class="column"><img src="./public/img/packages-icon.png" alt="">
+                <p>packages</p></div>
+                <div class="column"><img src="./public/img/outils-icon.png" alt="">
+                <p>outils</p></div>
+                <div class="column"><img src="./public/img/projets-icon.png" alt="">
+                <p>projets</p></div>
+                <div class="column"><img src="./public/img/temoignages-icon.png" alt="">
+                <p>temoignages</p></div>
+                <div class="column"><img src="./public/img/contact-icon.png" alt="">
+                <p>contact</p></div>
             </div>
         </div>
     </nav>
-    <img src="./public/img/banner-home.png" style="width: 100%; height: 500px; ;" alt="">
+    <img src="./public/img/banner-home.png" style="width: 100%; height: 400px; ;" alt="">
     <div class="s1">
-        <img src="./public/img/logo-about.png" style="height: 400px; width: 600px;"  alt="">
+        <img src="./public/img/logo-about.png"   alt="">
         <div class="txte">
             <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, minima.</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta tenetur laudantium, et animi aliquid necessitatibus pariatur voluptates magnam aut temporibus ex omnis voluptatum, iste, inventore consequatur repudiandae repellat suscipit deserunt.</p>
@@ -48,66 +48,65 @@
     </div>
 <div class="card">
     <div class="cata1">
-        <h3>Eclosion</h3>
-        <img src="./public/img/icon-eclosion.png" alt="">
+        <h3 class="c1">Eclosion</h3>
+        <img src="./public/img/icon-eclosion.png" class="cc" alt="">
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam fugit aliquam quisquam? Vero, fugit.</p>
         <button>ca m'interesse</button>
     </div>
     <div class="cata2">
-        <h3>Evolution</h3>
-        <img src="./public/img/icon-evolution.png" alt="">
+        <h3 class="c1">Evolution</h3>
+        <img src="./public/img/icon-evolution.png" class="cc"  alt="">
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam fugit aliquam quisquam? Vero, fugit.</p>
         <button>ca m'interesse</button>
     </div>
     <div class="cata3">
-        <h3>Envol</h3>
-        <img src="./public/img/icon-envole.png" alt="">
+        <h3 class="c1">Envol</h3>
+        <img src="./public/img/icon-envole.png" class="cc" alt="">
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam fugit aliquam quisquam? Vero, fugit.</p>
         <button>ca m'interesse</button>
     </div>
 </div>
-<div class="s1">
+<div class="s3">
     <img src="./public/img/outils.png" alt="">
     <h2 class="txte">Des outils pour une communication complete</h2>
 </div>
-<div class="catalogue">
+<div class="card2 ">
     <div class="cata1">
-        <h2></h2>
-        <img src="" alt="">
-        <p></p>
-        <button></button>
+        <h2>identité visuelle</h2>
+        <img src="./public/img/identite-graphique.png" alt="">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, animi.</p>
+        <button class="black">ca m'interesse </button>
     </div>
     <div class="cata2">
-        <h2></h2>
-        <img src="" alt="">
-        <p></p>
-        <button></button>
+        <h2>Web</h2>
+        <img src="./public/img/reseaux-sociaux.png" alt="">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, animi.</p>
+        <button class="black">ca m'interesse </button>
     </div>
     <div class="cata3">
-        <h2></h2>
-        <img src="" alt="">
-        <p></p>
-        <button></button>
+        <h2>Print</h2>
+        <img src="./public/img/print.png" alt="">
+        <p>Lorem ipsum dolor sit amet.</p>
+        <button  class="black">ca m'interesse </button>
     </div>
 </div>
 <footer>
     <div class="icons">
         <h3>Packs</h3>
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
+        <img class="bas" src="./public/img/icon-eclosion.png" alt="">
+        <img class="bas" src="./public/img/icon-evolution.png" alt="">
+        <img class="bas" src="./public/img/icon-envole.png" alt="">
     </div>
     <div class="icons">
         <h3>Outils</h3>
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
+        <img class="bas" src="./public/img/identite-graphique.png" alt="">
+        <img class="bas" src="./public/img/reseaux-sociaux.png" alt="">
+        <img class="bas" src="./public/img/print.png" alt="">
     </div>
     <div class="icons">
         <h3>social media</h3>
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
+        <img class="bas" src="./public/img/social-f.png" alt="">
+        <img class="bas" src="./public/img/google-plus.png" alt="">
     </div>
 </footer>
 </body>
