MediaQuery Fin exo

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p>outils</p></div>
                 <div class="column"><img src="./public/img/projets-icon.png" alt="">
                 <p>projets</p></div>
-                <div class="column"><img src="./public/img/temoignages-icon.png" alt="">
+                <div class="column"><img id="temoignage" src="./public/img/temoignages-icon.png" alt="">
                 <p>temoignages</p></div>
                 <div class="column"><img src="./public/img/contact-icon.png" alt="">
                 <p>contact</p></div>
